--- a/labs/lab10/presentation/net-os-admin--lab10--presentation.qmd
+++ b/labs/lab10/presentation/net-os-admin--lab10--presentation.qmd
@@ -1,200 +1,119 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №10"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Расширенные настройки SMTP-сервера"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Приобретение навыков расширенной настройки SMTP-сервера.
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Настроить Dovecot для работы с протоколом LMTP
+- Реализовать SMTP-аутентификацию через SASL
+- Настроить работу SMTP поверх TLS
+- Автоматизировать настройку через скрипт Vagrant
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+![Запуск мониторинга и настройка LMTP в Dovecot](image/1.png){width=70%}
 
-:::
-::: {.column width="30%"}
+# Настройка LMTP в Dovecot
 
-![](./image/kulyabov.jpg)
+**Конфигурация протокола доставки:**
+- Добавление LMTP в поддерживаемые протоколы
+- Настройка сервиса LMTP для взаимодействия с Postfix
+- Интеграция через Unix-сокет
 
-:::
-::::::::::::::
+![Настройка LMTP-транспорта в Postfix и перезапуск служб](image/2.png){width=70%}
 
-# Вводная часть
+# Тестирование LMTP
 
-## Актуальность
+**Проверка работоспособности:**
+- Перезапуск служб Postfix и Dovecot
+- Отправка тестового письма с клиента
+- Проверка доставки в почтовый ящик
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+![Тестирование отправки письма через LMTP](image/3.png){width=70%}
 
-## Объект и предмет исследования
+# Настройка SMTP-аутентификации
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+**Конфигурация SASL:**
+- Настройка службы аутентификации в Dovecot
+- Конфигурация параметров SASL в Postfix
+- Определение ограничений получателей
 
-## Цели и задачи
+![Настройка службы аутентификации SASL и параметров Postfix](image/4.png){width=70%}
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Мастер-конфигурация Postfix
 
-## Материалы и методы
+**Включение аутентификации:**
+- Изменение файла master.cf
+- Поддержка SASL на порту 25
+- Настройка ограничений доступа
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+![Изменение конфигурации master.cf для SASL-аутентификации](image/5.png){width=70%}
 
-# Создание презентации
+# Тестирование аутентификации
 
-## Процессор `pandoc`
+**Проверка механизма PLAIN:**
+- Генерация строки аутентификации в base64
+- Подключение через telnet к порту 25
+- Успешная проверка учетных данных
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+![Генерация строки аутентификации и тестирование через telnet](image/6.png){width=70%}
 
-## Формат `pdf`
+# Настройка TLS
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+**Подготовка шифрования:**
+- Копирование сертификатов из Dovecot
+- Настройка параметров TLS в Postfix
+- Конфигурация путей к сертификатам
 
-## Код для формата `pdf`
+![Копирование сертификатов и настройка TLS в Postfix](image/7.png){width=70%}
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+# Конфигурация порта submission
 
-## Формат `html`
+**Настройка защищенного доступа:**
+- Запуск сервиса на порту 587
+- Поддержка STARTTLS
+- Обязательная аутентификация
+- Правила межсетевого экрана
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+![Настройка порта 587 с TLS и правил FirewallD](image/8.png){width=70%}
 
-## Код для формата `html`
+# Тестирование TLS
 
-- Тема задаётся в файле `Makefile`
+**Проверка шифрования:**
+- Подключение через openssl
+- Проверка поддержки STARTTLS
+- Аутентификация в зашифрованном канале
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+![Тестирование TLS-подключения через openssl](image/9.png){width=70%}
 
-## Получающиеся форматы
+# Настройка почтового клиента
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+**Интеграция с Evolution:**
+- Настройка порта 587
+- Включение STARTTLS
+- Конфигурация учётной записи
 
-# Элементы презентации
-
-## Актуальность
-
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
-
-## Цели и задачи
-
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+![Настройка почтового клиента Evolution для работы с TLS](image/10.png){width=70%}
 
 
-## Итоговый слайд
+# Контрольные вопросы
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+**Основные вопросы:**
+- **Формат аутентификации с доменом:** `auth_username_format = %Ln`
+- **Функции Relay-сервера:** Пересылка между системами, фильтрация, кэширование
+- **Угрозы открытого ретранслятора:** Спам-рассылки, перегрузка, блокировка IP
 
-# Рекомендую
+# Выводы
 
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Настроен протокол LMTP для локальной доставки почты
+- Реализована аутентификация SMTP через SASL
+- Настроено шифрование через TLS на порту 587
+- Создан автоматизированный сценарий развертывания
+- Приобретены навыки расширенной настройки почтовых серверов
