--- a/labs/lab10/report/net-os-admin--lab10--report.qmd
+++ b/labs/lab10/report/net-os-admin--lab10--report.qmd
@@ -1,67 +1,100 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №10"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Расширенные настройки SMTP-сервера"
 license: "CC BY"
 ---
 
 # Цель работы
-
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Приобретение практических навыков конфигурирования SMTP-сервера с настройкой аутентификации, поддержки протокола LMTP и работы поверх TLS.
 
 # Задание
-
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Настроить Dovecot для работы с протоколом LMTP.
+2. Настроить аутентификацию на SMTP-сервере посредством SASL.
+3. Настроить работу SMTP-сервера поверх TLS.
+4. Скорректировать скрипт для автоматической настройки почтового сервера в инфраструктуре Vagrant.
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## 10.4.1. Настройка LMTP в Dovecot
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+### Подготовка и мониторинг
+Была запущена виртуальная машина **server**, выполнено подключение и переход в режим суперпользователя. В отдельном терминале запущен мониторинг почтового журнала `/var/log/maillog` для наблюдения за работой почтовых служб в реальном времени.
+
+![Запуск мониторинга почтового журнала](image/1.png)
+
+### Конфигурация протоколов Dovecot и сервиса LMTP
+В файле `/etc/dovecot/dovecot.conf` добавлен протокол **LMTP** в список поддерживаемых протоколов. В файле `/etc/dovecot/conf.d/10-master.conf` настроен сервис LMTP для взаимодействия с Postfix через Unix-сокет с указанием прав доступа и принадлежности пользователям.
+
+![Настройка протоколов Dovecot и конфигурация сервиса LMTP](image/2.png)
+
+### Интеграция LMTP с Postfix
+С помощью утилиты `postconf` настроен транспорт почты через созданный Unix-сокет, что позволяет Postfix передавать почтовые сообщения на обработку Dovecot через протокол LMTP.
+
+![Настройка транспорта почты в Postfix через LMTP](image/3.png)
+
+### Тестирование LMTP-доставки
+После перезапуска служб Postfix и Dovecot с клиентской машины отправлено тестовое письмо. В журнале `/var/log/maillog` наблюдалась корректная обработка сообщения через LMTP-соединение, подтверждающая работоспособность настройки.
+
+![Перезапуск служб и отправка тестового письма через LMTP](image/4.png)
+
+## 10.4.2. Настройка SMTP-аутентификации через SASL
+
+### Конфигурация службы аутентификации
+В файле `/etc/dovecot/conf.d/10-master.conf` определена служба аутентификации пользователей с настройкой Unix-сокетов для взаимодействия между Postfix и Dovecot, обеспечивая безопасный обмен учетными данными.
+
+![Настройка службы аутентификации SASL в Dovecot](image/5.png)
+
+### Настройка Postfix для работы с SASL
+С помощью `postconf` настроены параметры SASL в Postfix, включая тип аутентификации и путь к Unix-сокету. Это позволяет Postfix делегировать проверку учетных данных службе Dovecot.
+
+![Настройка параметров SASL и ограничений получателей в Postfix](image/6.png)
+
+### Подготовка и тестирование аутентификации
+На клиентской машине установлен telnet и сгенерирована строка для аутентификации в формате base64. Выполнено подключение к SMTP-серверу через порт 25 и проверена аутентификация с использованием механизма PLAIN.
+
+![Генерация строки аутентификации и тестирование через telnet](image/7.png)
+
+## 10.4.3. Настройка SMTP поверх TLS
+
+### Подготовка TLS-сертификатов
+Сертификат и ключ из Dovecot скопированы в соответствующие каталоги TLS для обеспечения совместимости с SELinux. Это позволяет использовать существующие сертификаты для шифрования SMTP-трафика.
+
+![Копирование TLS-сертификатов и настройка параметров в Postfix](image/8.png)
+
+### Конфигурация порта submission с TLS
+В файле `/etc/postfix/master.cf` перенастроены службы: на порту 587 запущен submission-сервис с обязательной аутентификацией и поддержкой STARTTLS. Добавлено правило в FirewallD для разрешения трафика на этот порт.
+
+![Настройка submission-порта и правил межсетевого экрана](image/9.png)
+
+### Тестирование TLS-соединения
+Выполнено тестирование подключения к SMTP-серверу через порт 587 с использованием openssl для проверки поддержки STARTTLS. Проверена аутентификация через зашифрованное соединение, подтверждающая корректность настройки TLS.
+
+![Тестирование TLS-подключения через openssl на порту 587](image/10.png)
+
+## 10.4.4. Автоматизация настройки почтового сервера
+
+### Подготовка конфигурационных файлов для Vagrant
+Все измененные конфигурационные файлы Dovecot и Postfix скопированы в соответствующую директорию проекта Vagrant для последующего использования в скрипте автоматической настройки.
+
+
+### Модификация provisioning-скрипта
+Скорректирован скрипт `mail.sh` для автоматической настройки всех компонентов почтового сервера, включая установку пакетов, копирование конфигураций, настройку TLS, аутентификации и правил межсетевого экрана.
+
+# Контрольные вопросы
+
+1. **Приведите пример задания формата аутентификации пользователя в Dovecot в форме логина с указанием домена.**  
+   Для аутентификации в формате логина с доменом необходимо задать: `auth_username_format = %Ln`. Это сохранит полное имя пользователя с доменной частью.
+
+2. **Какие функции выполняет почтовый Relay-сервер?**  
+   Relay-сервер пересылает почтовые сообщения между различными почтовыми системами, выступая промежуточным звеном. Он может выполнять фильтрацию, кэширование, балансировку нагрузки и обеспечивать дополнительную безопасность.
+
+3. **Какие угрозы безопасности могут возникнуть в случае настройки почтового сервера как Relay-сервера?**  
+   Настройка почтового сервера как открытого ретранслятора может привести к его использованию для спам-рассылок, увеличению нагрузки на сервер, блокировке IP-адреса антиспам-фильтрами и компрометации репутации домена.
 
 # Выводы
-
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+- Освоены методы настройки протокола LMTP в Dovecot для локальной доставки почты.
+- Реализована аутентификация SMTP через механизм SASL с использованием Dovecot в качестве провайдера аутентификации.
+- Настроено шифрование SMTP-трафика с использованием TLS на порту submission (587).
+- Создан автоматизированный сценарий развертывания и настройки почтового сервера в инфраструктуре Vagrant.
+- Приобретены практические навыки конфигурирования и тестирования расширенных функций почтовых серверов.
