--- a/labs/lab16/presentation/net-os-admin--lab16--presentation.qmd
+++ b/labs/lab16/presentation/net-os-admin--lab16--presentation.qmd
@@ -1,200 +1,163 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №16"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Базовая защита от атак типа «brute force»"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Получить навыки работы с **Fail2ban** для защиты от атак «brute force».
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Установить и настроить Fail2ban для мониторинга служб
+- Проверить работу через тестирование SSH-аутентификации
+- Автоматизировать настройку через скрипт Vagrant
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+![Установка и запуск службы Fail2ban](image/1.png){width=70%}
 
-:::
-::: {.column width="30%"}
+# Установка и базовая настройка
 
-![](./image/kulyabov.jpg)
+**Начальная конфигурация:**
+- Установка пакета fail2ban через dnf
+- Запуск службы и добавление в автозагрузку
+- Мониторинг журнала событий в реальном времени
 
-:::
-::::::::::::::
+![Запуск мониторинга журнала Fail2ban](image/2.png){width=70%}
 
-# Вводная часть
+# Создание локальной конфигурации
 
-## Актуальность
+**Настройка параметров защиты:**
+- Создание файла customisation.local
+- Установка времени блокировки на 1 час
+- Определение глобальных параметров DEFAULT
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+![Создание файла локальной конфигурации Fail2ban](image/3.png){width=70%}
 
-## Объект и предмет исследования
+# Настройка защиты SSH
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+**Защита доступа по SSH:**
+- Включение защиты для портов 22 и 2022
+- Активация фильтров sshd и sshd-ddos
+- Настройка правил для обнаружения атак
 
-## Цели и задачи
+![Настройка защиты SSH в конфигурационном файле](image/4.png){width=70%}
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Настройка защиты веб-сервера
 
-## Материалы и методы
+**Защита Apache:**
+- Включение защиты от атак на аутентификацию
+- Активация фильтров для блокировки ботов
+- Защита от переполнений и скриптовых атак
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+![Настройка защиты HTTP-служб Apache](image/5.png){width=70%}
 
-# Создание презентации
+# Настройка защиты почтовых служб
 
-## Процессор `pandoc`
+**Защита почтовой системы:**
+- Активация защиты Postfix и Dovecot
+- Настройка фильтров для почтовой аутентификации
+- Защита от спама и RBL-атак
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+![Настройка защиты почтовых служб Postfix и Dovecot](image/6.png){width=70%}
 
-## Формат `pdf`
+# Перезапуск и проверка службы
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+**Применение изменений:**
+- Перезапуск службы Fail2ban
+- Проверка журнала событий
+- Подтверждение корректной работы конфигураций
 
-## Код для формата `pdf`
+![Перезапуск службы Fail2ban и проверка журнала](image/7.png){width=70%}
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+# Проверка статуса защиты
 
-## Формат `html`
+**Мониторинг работы системы:**
+- Проверка общего статуса Fail2ban
+- Просмотр статуса защиты SSH
+- Убеждение в активности всех настроенных фильтров
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+![Проверка статуса Fail2ban и защиты SSH](image/8.png){width=70%}
 
-## Код для формата `html`
+# Настройка параметров защиты SSH
 
-- Тема задаётся в файле `Makefile`
+**Тонкая настройка:**
+- Установка максимального количества попыток (maxretry = 2)
+- Настройка чувствительности системы защиты
+- Подготовка к тестированию блокировки
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+![Настройка параметра maxretry для SSH](image/9.png){width=70%}
 
-## Получающиеся форматы
+# Тестирование блокировки IP
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+**Проверка работы защиты:**
+- Попытки входа с неверным паролем с клиента
+- Автоматическая блокировка IP-адреса после 2 попыток
+- Подтверждение блокировки через статус службы
 
-# Элементы презентации
+![Тестирование блокировки IP-адреса при неудачных попытках SSH](image/10.png){width=70%}
 
-## Актуальность
+# Управление блокировками
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+**Ручное управление:**
+- Разблокировка IP-адреса клиента
+- Проверка снятия блокировки
+- Мониторинг изменений в статусе защиты
 
-## Цели и задачи
+![Ручная разблокировка IP-адреса клиента](image/11.png){width=70%}
 
-- Не формулируйте более 1--2 целей исследования
+# Настройка белого списка
 
-## Материалы и методы
+**Исключение доверенных адресов:**
+- Добавление IP-адреса клиента в ignoreip
+- Перезапуск службы для применения изменений
+- Проверка отсутствия блокировки для доверенного адреса
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+![Добавление IP-адреса в белый список и проверка](image/12.png){width=70%}
 
-## Содержание исследования
+# Автоматизация развертывания
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+**Подготовка к автоматизации:**
+- Создание структуры каталогов для конфигураций
+- Копирование файлов настроек в проект Vagrant
+- Организация файлов для скрипта установки
 
-## Результаты
+![Подготовка конфигурационных файлов для проекта Vagrant](image/13.png){width=70%}
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+# Создание скрипта автоматизации
 
+**Разработка provisioning-скрипта:**
+- Создание исполняемого bash-скрипта protect.sh
+- Включение установки пакетов и копирования конфигураций
+- Настройка прав доступа и автоматический запуск службы
 
-## Итоговый слайд
+![Создание скрипта автоматической настройки protect.sh](image/14.png){width=70%}
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+# Интеграция с Vagrant
 
-# Рекомендую
+**Настройка автоматического развертывания:**
+- Добавление вызова скрипта в Vagrantfile
+- Настройка порядка выполнения provisioning-шагов
+- Обеспечение автоматической защиты при создании виртуальной машины
 
-## Принцип 10/20/30
+![Интеграция скрипта в конфигурацию Vagrantfile](image/15.png){width=70%}
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+# Контрольные вопросы
 
-## Связь слайдов
+**Ключевые вопросы:**
+- **Принцип работы Fail2ban:** Анализ логов → обнаружение атак → блокировка через firewall
+- **Приоритет конфигураций:** jail.local > jail.conf
+- **Оповещения:** Настройка через параметр action в конфигурации
+- **Действия при блокировке:** Блокировка IP, отправка уведомлений, выполнение команд
+- **Управление:** Статус через `fail2ban-client status`, разблокировка через `unbanip`
 
-::: incremental
+# Выводы
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Успешно установлен и настроен Fail2ban для защиты сервера
+- Проверена работа системы через тестирование блокировки SSH-доступа
+- Настроена защита для SSH, HTTP и почтовых служб
+- Реализована автоматизация установки и настройки через скрипт Vagrant
+- Приобретены практические навыки защиты от атак типа «brute force»
