--- a/labs/lab16/report/net-os-admin--lab16--report.qmd
+++ b/labs/lab16/report/net-os-admin--lab16--report.qmd
@@ -1,67 +1,133 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №16"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Базовая защита от атак типа «brute force»"
 license: "CC BY"
 ---
 
 # Цель работы
-
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получение практических навыков работы с программным средством **Fail2ban** для обеспечения базовой защиты сервера от атак типа «brute force».
 
 # Задание
-
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Установить и настроить **Fail2ban** для отслеживания работы сетевых служб сервера.
+2. Проверить работу **Fail2ban** через попытки несанкционированного доступа по протоколу SSH.
+3. Создать скрипт для автоматической установки и настройки **Fail2ban** в инфраструктуре **Vagrant**.
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## 16.4.1. Установка и настройка Fail2ban
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+### Установка и запуск Fail2ban
+На сервере выполнена установка пакета **Fail2ban** с помощью менеджера пакетов **dnf**. После установки служба была запущена и добавлена в автозагрузку для обеспечения постоянной защиты.
+
+![Установка и запуск службы Fail2ban](image/1.png)
+
+### Мониторинг журнала событий
+В отдельном терминале запущен мониторинг журнала событий **Fail2ban** для наблюдения за работой системы в реальном времени. Это позволяет отслеживать все действия по блокировке и разблокировке IP-адресов.
+
+![Запуск мониторинга журнала Fail2ban](image/2.png)
+
+### Создание локальной конфигурации
+Создан файл локальной конфигурации `customisation.local` в каталоге `/etc/fail2ban/jail.d/`. В файле заданы глобальные настройки, включая время блокировки злоумышленников на 1 час (3600 секунд).
+
+![Создание файла локальной конфигурации Fail2ban](image/3.png)
+
+### Настройка защиты SSH
+В конфигурационный файл добавлены настройки для защиты службы **SSH**. Настроена защита для стандартного порта 22 и альтернативного порта 2022, активированы различные фильтры для обнаружения атак.
+
+![Настройка защиты SSH в конфигурационном файле](image/4.png)
+
+### Настройка защиты HTTP-служб
+Добавлены настройки для защиты веб-сервера **Apache**. Активированы различные фильтры для защиты от атак на аутентификацию, вредоносных ботов, переполнений и других типов угроз.
+
+![Настройка защиты HTTP-служб Apache](image/5.png)
+
+### Настройка защиты почтовых служб
+Включена защита для почтовых служб **Postfix** и **Dovecot**. Настроены фильтры для защиты от спама, атак на аутентификацию SASL и других угроз, связанных с почтовой системой.
+
+![Настройка защиты почтовых служб Postfix и Dovecot](image/6.png)
+
+### Перезапуск и проверка службы
+После каждой настройки выполнены перезапуск службы **Fail2ban** и проверка журнала событий для подтверждения корректного применения изменений.
+
+![Перезапуск службы Fail2ban и проверка журнала](image/7.png)
+
+## 16.4.2. Проверка работы Fail2ban
+
+### Проверка статуса службы
+Проверен общий статус **Fail2ban** и статус защиты конкретной службы **SSH**. Убедились, что служба работает корректно и защита SSH активна.
+
+![Проверка статуса Fail2ban и защиты SSH](image/8.png)
+
+### Настройка параметров защиты SSH
+Установлено максимальное количество неудачных попыток входа для SSH равное 2. Это позволяет быстрее блокировать злоумышленников при попытках подбора пароля.
+
+![Настройка параметра maxretry для SSH](image/9.png)
+
+### Тестирование блокировки
+С клиентской машины выполнены попытки входа по SSH с неверным паролем. После превышения лимита попыток IP-адрес клиента был автоматически заблокирован системой **Fail2ban**.
+
+![Тестирование блокировки IP-адреса при неудачных попытках SSH](image/10.png)
+
+### Разблокировка IP-адреса
+Выполнена ручная разблокировка IP-адреса клиента через клиент **Fail2ban**. Проверен статус защиты SSH для подтверждения снятия блокировки.
+
+![Ручная разблокировка IP-адреса клиента](image/11.png)
+
+### Настройка исключений
+В конфигурационный файл добавлены IP-адреса для игнорирования (белый список). После перезапуска службы и повторных попыток входа с неверным паролем подтверждено, что адрес из белого списка не блокируется.
+
+![Добавление IP-адреса в белый список и проверка](image/12.png)
+
+## 16.4.3. Автоматизация настройки
+
+### Подготовка конфигурационных файлов
+Создана структура каталогов в проекте **Vagrant** и скопирован конфигурационный файл `customisation.local` для последующего использования в скрипте автоматической настройки.
+
+![Подготовка конфигурационных файлов для проекта Vagrant](image/13.png)
+
+### Создание provisioning-скрипта
+Создан исполняемый bash-скрипт `protect.sh` для автоматической установки и настройки **Fail2ban**. Скрипт включает установку пакета, копирование конфигураций, настройку прав доступа и запуск службы.
+
+![Создание скрипта автоматической настройки protect.sh](image/14.png)
+
+### Интеграция с Vagrant
+В конфигурационный файл **Vagrantfile** добавлен вызов созданного скрипта в качестве provisioning-шага для виртуальной машины сервера. Это обеспечивает автоматическую настройку защиты при развертывании среды.
+
+![Интеграция скрипта в конфигурацию Vagrantfile](image/15.png)
+
+# Контрольные вопросы
+
+1. **Поясните принцип работы Fail2ban.**  
+   **Fail2ban** отслеживает логи сетевых служб, анализирует их на наличие подозрительной активности (например, множественные неудачные попытки входа) и автоматически блокирует IP-адреса злоумышленников через добавление правил в межсетевой экран.
+
+2. **Настройки какого файла более приоритетны: jail.conf или jail.local?**  
+   Настройки из файла `jail.local` имеют более высокий приоритет и переопределяют соответствующие параметры из `jail.conf`. Рекомендуется вносить изменения именно в `jail.local` или файлы в каталоге `jail.d/`.
+
+3. **Как настроить оповещение администратора при срабатывании Fail2ban?**  
+   Оповещение настраивается через параметры `action` в конфигурации тюрьмы. Можно использовать встроенные действия типа `action_mw` (отправка письма с whois-информацией) или `action_mwl` (письмо с логами), предварительно настроив почтовую систему.
+
+4. **Поясните построчно настройки по умолчанию в конфигурационном файле /etc/fail2ban/jail.conf, относящиеся к веб-службе.**  
+   В секции `[apache-auth]` задаются параметры для защиты аутентификации Apache: `port = http,https`, `filter = apache-auth`, `logpath` указывает путь к логам ошибок Apache, `maxretry` определяет количество допустимых попыток.
+
+5. **Поясните построчно настройки по умолчанию в конфигурационном файле /etc/fail2ban/jail.conf, относящиеся к почтовой службе.**  
+   В секции `[postfix]` настроена защита SMTP-сервера: `port = smtp,ssmtp`, `filter = postfix`, `logpath` указывает на логи Postfix, параметры `maxretry` и `findtime` определяют условия блокировки.
+
+6. **Какие действия может выполнять Fail2ban при обнаружении атакующего IP-адреса? Где можно посмотреть описание действий для последующего использования в настройках Fail2ban?**  
+   **Fail2ban** может блокировать IP через iptables, firewalld, отправлять уведомления, выполнять произвольные команды. Описание действий находится в файлах в каталоге `/etc/fail2ban/action.d/`.
+
+7. **Как получить список действующих правил Fail2ban?**  
+   Команда `fail2ban-client status` показывает список активных "тюрем" (jails). Для конкретной службы: `fail2ban-client status <имя_службы>`.
+
+8. **Как получить статистику заблокированных Fail2ban адресов?**  
+   Статистика отображается в журнале `/var/log/fail2ban.log`. Также можно использовать `fail2ban-client status <имя_службы>` для просмотра заблокированных IP в конкретной "тюрьме".
+
+9. **Как разблокировать IP-адрес?**  
+   Команда `fail2ban-client set <имя_службы> unbanip <IP-адрес>` разблокирует указанный адрес. Для разблокировки всех адресов в "тюрьме" можно использовать `fail2ban-client set <имя_службы> unban --all`.
 
 # Выводы
-
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+- Освоены практические навыки установки и настройки системы защиты **Fail2ban**.
+- Настроена комплексная защита сетевых служб (SSH, HTTP, почтовых) от атак типа «brute force».
+- Проверена работоспособность системы через тестирование блокировки и разблокировки IP-адресов.
+- Реализована автоматизация процесса развертывания защиты через provisioning-скрипт в инфраструктуре **Vagrant**.
+- Приобретены знания по мониторингу и управлению системой защиты от несанкционированного доступа.
